--- a/sass/components/_books-slider.sass
+++ b/sass/components/_books-slider.sass
@@ -1,5 +1,7 @@
 .books-slider
   position: relative
+  padding-left: 60px
+  padding-right: 60px
   .book
     +grid-container
     > img
@@ -52,9 +54,9 @@
         transform: translateY(-50%) translateX(-5px)
     +media-mediumup
       > button.owl-next
-        right: -40px
+        right: -60px
       > button.owl-prev
-        left: -40px
+        left: -60px
 
 .bg-blackboard
   background-color: $color-blackboard
